--- a/craft/templates/_layout.html
+++ b/craft/templates/_layout.html
@@ -16,6 +16,8 @@
 	<title>{% if title is defined %}{{ title }} - {% endif %}{{ siteName }}</title>
 	<link rel="home" href="{{ siteUrl }}" />
 
+	{% includeCssFile "assets/css/tachyons.min.css" %}
+
 	<style type="text/css">
 		body { margin: 50px; font-family: sans-serif; background: #fff; }
 		#container { margin: 0 auto; width: 700px;
